# wichtelapp

./: .gitignore  Dockerfile  README.md  fly.toml  justfile  main.py  pyproject.toml  requirements.txt
.github/workflows/: auto-merge.yml  ci.yml
config/: adapters.py  settings.py  urls.py
wichtel/: admin.py  apps.py  models.py  signals.py  test_models.py  urls.py  views.py
wichtel/migrations/: 0001_initial.py  0002_event.py  0003_drawing.py  0004_add_code_name_to_profile.py  0005_add_unique_to_code_name.py
wichtel/static/wichtel/: styles.css
wichtel/templates/account/: confirm_login_code.html  login.html  request_login_code.html
wichtel/templates/account/messages/: logged_in.txt  logged_out.txt  login_code_sent.txt
wichtel/templates/admin/wichtel/drawing/: change_list.html
wichtel/templates/wichtel/: base.html  giftlist.html  wishlist.html
